EcomApp-7: add main product retrieval
