# src/main/resources/static/openapi-spec.yaml
@@ -86,6 +86,20 @@ paths:
               schema:
                 type: string
                 example: json
+                
+  /product/main:
+    get:
+      tags:
+        - Product Managment
+      operationId: mainProduct
+      summary: Retrieve the main product for the app
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ProductDto'
 
   /product/add:
     post:
